fix - pt_BR message

--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -28,4 +28,4 @@ msgstr "Deu erro :("
 
 #: extension.js:55
 msgid "Restarting internet..."
-msgstr "Reiniciando internet"
+msgstr "Reiniciando internet..."
